Fixed a crash in KisDlgLayerProperties

The root layer will not have a compositeOp, because it is
meaningless for it. Actually, it doesn't have layer flags and
opacity as well, but this is a different bug.

BUG:292551